--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "font-awesome": "^4.7.0",
     "immutable": "5.0.0-beta.5",
     "lexical": "^0.14.5",
+    "markdown-to-jsx": "^7.4.7",
     "react": "^18.3.1",
     "react-accessible-accordion": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-dropzone-esm": "^15.0.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
     "react-schemaorg": "^2.0.0",
