--- a/config.yaml
+++ b/config.yaml
@@ -23,5 +23,7 @@ siteStream:
     - c_dashboardCompletionDescription
     - c_dashboardHeroDescription
     - c_testDashboards
- authentication:
+authorization:
+  policyName: pages-auth-policy
+authentication:
   policyName: pages-auth-policy
