--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "@lexical/react": "^0.14.5",
+    "@reduxjs/toolkit": "^2.2.4",
     "@types/react-slick": "^0.23.13",
     "@yext/types": "0.1.13-alpha",
     "chart.js": "^4.4.2",
