--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "@lexical/react": "^0.14.5",
-    "@reduxjs/toolkit": "^2.2.4",
+    "@reduxjs/toolkit": "^2.2.5",
     "@types/react-slick": "^0.23.13",
     "@yext/types": "0.1.13-alpha",
     "chart.js": "^4.4.2",
@@ -42,6 +42,7 @@
     "react-dropzone": "^14.2.3",
     "react-dropzone-esm": "^15.0.1",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-schemaorg": "^2.0.0",
     "react-slick": "^0.30.2",
