--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chartjs-gauge": "^0.3.0",
     "d3-geo": "^3.1.1",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^11.2.4",
     "immutable": "5.0.0-beta.5",
     "lexical": "^0.14.5",
     "markdown-to-jsx": "^7.4.7",
@@ -42,6 +43,7 @@
     "react-dropzone": "^14.2.3",
     "react-dropzone-esm": "^15.0.1",
     "react-icons": "^5.2.1",
+    "react-loading-icons": "^1.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-schemaorg": "^2.0.0",
