--- a/package.json
+++ b/package.json
@@ -24,15 +24,20 @@
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "@lexical/react": "^0.15.0",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@reduxjs/toolkit": "^2.2.5",
+    "@tanstack/react-query": "^5.51.15",
     "@types/react-slick": "^0.23.13",
     "@yext/types": "0.1.13-alpha",
     "chart.js": "^4.4.3",
     "chartjs-gauge": "^0.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "d3-geo": "^3.1.1",
     "font-awesome": "^4.7.0",
     "immutable": "5.0.0-beta.5",
     "lexical": "^0.15.0",
+    "lucide-react": "^0.417.0",
     "markdown-to-jsx": "^7.4.7",
     "react": "^18.3.1",
     "react-accessible-accordion": "^5.0.0",
@@ -48,7 +53,9 @@
     "react-schemaorg": "^2.0.0",
     "react-slick": "^0.30.2",
     "schema-dts": "^1.1.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
