--- a/package.json
+++ b/package.json
@@ -23,8 +23,14 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "@hookform/resolvers": "^3.9.0",
     "@lexical/react": "^0.15.0",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.51.15",
     "@types/react-slick": "^0.23.13",
@@ -35,6 +41,7 @@
     "clsx": "^2.1.1",
     "d3-geo": "^3.1.1",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^11.3.19",
     "immutable": "5.0.0-beta.5",
     "lexical": "^0.15.0",
     "lucide-react": "^0.417.0",
@@ -46,6 +53,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-dropzone-esm": "^15.0.1",
+    "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-loading-icons": "^1.1.0",
     "react-redux": "^9.1.2",
@@ -55,7 +63,8 @@
     "schema-dts": "^1.1.2",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
