--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "node": "^18.20.0 || >=20.2.0"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.9.0",
